# GLFWE

./: .gitignore  .meson-subproject-wrap-hash.txt  README.md  meson.build
demo/: main.cpp
glad/: glad.h  meson.build
include/GLFWE/: buffer.hpp  shader.hpp  shader_program.hpp  statics.cpp  texture.hpp  vertex_array.hpp  window.hpp
include/GLFWE/shape/: convex_polygon.hpp  premade.hpp  quad.hpp  shaders.hpp  shape_shader.hpp  square.hpp
include/GLFWE/text/: character_set.hpp
include/glad/: glad.c
stb/: meson.build
subprojects/: freetype.wrap  glm.wrap  logger.wrap
subprojects/glm/: meson.build
